--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,9 @@ body {
   background-position-x: center;
   background-position-y: center;
   background-attachment: fixed;
+
+  background-image: url("./hatter.jpg");
+  background-size: cover;
 }
 
 #content {
@@ -42,6 +45,9 @@ h2 {
 p.imgtitle {
   font-size: 1.1em;
   margin: 0;
+  text-align: center;
+  font-style: italic;
+  line-height: 130%;
 }
 
 table,
@@ -49,7 +55,50 @@ table,
   border: 3px solid green;
 }
 
+
 a:link,
 a:visited {
   color: blue;
 }
+
+p{
+text-align: justify;
+text-indent: 25px;
+}
+table,
+.frame {
+  border: 3px solid green;
+  background-color: rgba(227, 225, 233, 0.8);
+  float: right;
+  margin-right: 20px;
+}
+
+table {
+  background-color: rgba(227, 225, 233, 0.8);
+  border-collapse: collapse;
+  float: left;
+  margin-right: 20px;
+}
+
+th {
+  background-color: green;
+  color: white;
+}
+
+th,td {
+  border: 1px solid black;
+  text-align: center;
+}
+
+table * {
+  padding: 15px;
+}
+a, a:hover{
+text-decoration: none;
+
+}
+
+a:hover{
+  color: yellow;
+}
+
